syntax = "proto3";

import "tasklet/services/ci/proto/ci.proto";
import "tasklet/api/tasklet.proto";

package alice.tasklet.build_marker_tests_config;

message Config {
    string checkout_arcadia_from_url = 1;
    string uniproxy_websocket_url = 2;
    bool use_vins_hamster = 3;
}

message Data {
    string config = 1;
    int64 resource_id = 2;
}

message Input {
    Config config = 1;
}

message State {
    bool success = 1;
}

message Output {
    State state = 1;
    Data data = 2;
}

message BuildMarkerTestsConfig {
    option (.tasklet.tasklet_interface) = true;

    Input input = 1 [(.tasklet.input) = true];
    Output output = 2 [(.tasklet.output) = true];
}
